<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_50sdp"/>

    <Button
        android:id="@+id/trebelloButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tribello"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_corner"/>

    <Button
        android:id="@+id/statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:layout_below="@+id/trebelloButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_corner"/>

    <Button
        android:id="@+id/add_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_player"
        android:layout_below="@+id/statistics"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_corner"/>

    <Button
        android:id="@+id/delete_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_players"
        android:layout_below="@+id/add_players"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_corner"/>
</RelativeLayout>